replaced incorrect + signs with - signs in astrometry for ELAIS-N2, ELAIS-S1, CDFS-SWIRE, and Lockman-SWIRE

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -681,7 +681,16 @@
    },
    "outputs": [],
    "source": [
-    "nb_fireworks_orig = len(fireworks)"
+    "nb_fireworks_orig = len(fireworks)\n",
+    "fireworks = masterlist.remove_duplicates(\n",
+    "    fireworks, 'fireworks_ra', 'fireworks_dec', \n",
+    "    sort_col=['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
+    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z'],\n",
+    "    flag_name='fireworks_flag_cleaned')\n",
+    "nb_fireworks = len(fireworks)\n",
+    "print(\"Fireworks initial catalogue as {} sources.\".format(nb_fireworks_orig))\n",
+    "print(\"Fireworks cleaned catalogue as {} sources ({} removed).\".format(nb_sparcs, nb_fireworks_orig - nb_fireworks))\n",
+    "print(\"Fireworks has {} sources flagged as having been cleaned\".format(np.sum(fireworks['fireworks_flag_cleaned'])))"
    ]
   },
   {
@@ -692,7 +701,16 @@
    },
    "outputs": [],
    "source": [
-    "nb_combo_orig = len(combo)"
+    "nb_combo_orig = len(combo)\n",
+    "combo = masterlist.remove_duplicates(\n",
+    "    combo, 'combo_ra', 'combo_dec', \n",
+    "    sort_col=['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
+    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z'],\n",
+    "    flag_name='sparcs_flag_cleaned')\n",
+    "nb_sparcs = len(sparcs)\n",
+    "print(\"SpARCS initial catalogue as {} sources.\".format(nb_sparcs_orig))\n",
+    "print(\"SpARCS cleaned catalogue as {} sources ({} removed).\".format(nb_sparcs, nb_sparcs_orig - nb_sparcs))\n",
+    "print(\"SpARCS has {} sources flagged as having been cleaned\".format(np.sum(sparcs['sparcs_flag_cleaned'])))"
    ]
   },
   {
@@ -740,8 +758,8 @@
     "    SkyCoord(wfc['wfc_ra'], wfc['wfc_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "wfc['wfc_ra'] += wfc_delta_ra.to(u.deg)\n",
-    "wfc['wfc_dec'] += wfc_delta_dec.to(u.deg)\n",
+    "wfc['wfc_ra'] -= wfc_delta_ra.to(u.deg)\n",
+    "wfc['wfc_dec'] -= wfc_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"WFC delta RA / delta Dec: {} / {}\".format(wfc_delta_ra, wfc_delta_dec))"
    ]
@@ -770,8 +788,8 @@
     "    SkyCoord(dxs['dxs_ra'], dxs['dxs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "dxs['dxs_ra'] += dxs_delta_ra.to(u.deg)\n",
-    "dxs['dxs_dec'] += dxs_delta_dec.to(u.deg)\n",
+    "dxs['dxs_ra'] -= dxs_delta_ra.to(u.deg)\n",
+    "dxs['dxs_dec'] -= dxs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"DXS delta RA / delta Dec: {} / {}\".format(dxs_delta_ra, dxs_delta_dec))"
    ]
@@ -800,8 +818,8 @@
     "    SkyCoord(servs['servs_ra'], servs['servs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "servs['servs_ra'] += servs_delta_ra.to(u.deg)\n",
-    "servs['servs_dec'] += servs_delta_dec.to(u.deg)\n",
+    "servs['servs_ra'] -= servs_delta_ra.to(u.deg)\n",
+    "servs['servs_dec'] -= servs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SERVS delta RA / delta Dec: {} / {}\".format(servs_delta_ra, servs_delta_dec))"
    ]
@@ -830,8 +848,8 @@
     "    SkyCoord(swire['swire_ra'], swire['swire_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "swire['swire_ra'] += swire_delta_ra.to(u.deg)\n",
-    "swire['swire_dec'] += swire_delta_dec.to(u.deg)\n",
+    "swire['swire_ra'] -= swire_delta_ra.to(u.deg)\n",
+    "swire['swire_dec'] -= swire_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SWIRE delta RA / delta Dec: {} / {}\".format(swire_delta_ra, swire_delta_dec))"
    ]
@@ -860,8 +878,8 @@
     "    SkyCoord(sparcs['sparcs_ra'], sparcs['sparcs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "sparcs['sparcs_ra'] += sparcs_delta_ra.to(u.deg)\n",
-    "sparcs['sparcs_dec'] += sparcs_delta_dec.to(u.deg)\n",
+    "sparcs['sparcs_ra'] -= sparcs_delta_ra.to(u.deg)\n",
+    "sparcs['sparcs_dec'] -= sparcs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SpARCS delta RA / delta Dec: {} / {}\".format(sparcs_delta_ra, sparcs_delta_dec))"
    ]
@@ -982,7 +1000,10 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#This section may be superseeded by merely using multiband detection as evidence of good data\n",
+    "#starmask.flag_artefacts"
+   ]
   },
   {
    "cell_type": "markdown",
