--- a/dmu1/dmu1_ml_ELAIS-N2/master_catalogue_ELAIS-N2.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N2/master_catalogue_ELAIS-N2.ipynb
@@ -843,8 +843,8 @@
     "    SkyCoord(wfc['wfc_ra'], wfc['wfc_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "wfc['wfc_ra'] += wfc_delta_ra\n",
-    "wfc['wfc_dec'] += wfc_delta_dec\n",
+    "wfc['wfc_ra'] -= wfc_delta_ra\n",
+    "wfc['wfc_dec'] -= wfc_delta_dec\n",
     "\n",
     "print(\"WFC delta RA / delta Dec: {} / {}\".format(wfc_delta_ra, wfc_delta_dec))"
    ]
@@ -906,8 +906,8 @@
     "    SkyCoord(swire['swire_ra'], swire['swire_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "swire['swire_ra'] += swire_delta_ra\n",
-    "swire['swire_dec'] += swire_delta_dec\n",
+    "swire['swire_ra'] -= swire_delta_ra\n",
+    "swire['swire_dec'] -= swire_delta_dec\n",
     "\n",
     "print(\"SWIRE delta RA / delta Dec: {} / {}\".format(swire_delta_ra, swire_delta_dec))"
    ]
@@ -969,8 +969,8 @@
     "    SkyCoord(sparcs['sparcs_ra'], sparcs['sparcs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "sparcs['sparcs_ra'] += sparcs_delta_ra\n",
-    "sparcs['sparcs_dec'] += sparcs_delta_dec\n",
+    "sparcs['sparcs_ra'] -= sparcs_delta_ra\n",
+    "sparcs['sparcs_dec'] -= sparcs_delta_dec\n",
     "\n",
     "print(\"SpARCS delta RA / delta Dec: {} / {}\".format(sparcs_delta_ra, sparcs_delta_dec))"
    ]
