--- a/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/master_catalogue_ELAIS-S1.ipynb
@@ -978,8 +978,8 @@
     "    SkyCoord(video['video_ra'], video['video_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "video['video_ra'] += video_delta_ra.to(u.deg)\n",
-    "video['video_dec'] += video_delta_dec.to(u.deg)\n",
+    "video['video_ra'] -= video_delta_ra.to(u.deg)\n",
+    "video['video_dec'] -= video_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"VIDEO delta RA / delta Dec: {} / {}\".format(video_delta_ra, video_delta_dec))\n",
     "#TODO: implement correction for any size of error"
@@ -1038,8 +1038,8 @@
     "    SkyCoord(voice['voice_ra'], voice['voice_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "voice['voice_ra'] += voice_delta_ra.to(u.deg)\n",
-    "voice['voice_dec'] += voice_delta_dec.to(u.deg)\n",
+    "voice['voice_ra'] -= voice_delta_ra.to(u.deg)\n",
+    "voice['voice_dec'] -= voice_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"VOICE delta RA / delta Dec: {} / {}\".format(voice_delta_ra, voice_delta_dec))"
    ]
@@ -1097,8 +1097,8 @@
     "    SkyCoord(servs['servs_ra'], servs['servs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "servs['servs_ra'] += servs_delta_ra.to(u.deg)\n",
-    "servs['servs_dec'] += servs_delta_dec.to(u.deg)\n",
+    "servs['servs_ra'] -= servs_delta_ra.to(u.deg)\n",
+    "servs['servs_dec'] -= servs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SERVS delta RA / delta Dec: {} / {}\".format(servs_delta_ra, servs_delta_dec))"
    ]
@@ -1156,8 +1156,8 @@
     "    SkyCoord(swire['swire_ra'], swire['swire_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "swire['swire_ra'] += swire_delta_ra.to(u.deg)\n",
-    "swire['swire_dec'] += swire_delta_dec.to(u.deg)\n",
+    "swire['swire_ra'] -= swire_delta_ra.to(u.deg)\n",
+    "swire['swire_dec'] -= swire_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SWIRE delta RA / delta Dec: {} / {}\".format(swire_delta_ra, swire_delta_dec))"
    ]
