reversed change to + in astrometry correction (fixed function instead)

--- a/dmu1/dmu1_ml_Lockman-SWIRE/master_catalogue_Lockman-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/master_catalogue_Lockman-SWIRE.ipynb
@@ -1471,8 +1471,8 @@
     "    SkyCoord(wfc['wfc_ra'], wfc['wfc_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "wfc['wfc_ra'] -= wfc_delta_ra.to(u.deg)\n",
-    "wfc['wfc_dec'] -= wfc_delta_dec.to(u.deg)\n",
+    "wfc['wfc_ra'] += wfc_delta_ra.to(u.deg)\n",
+    "wfc['wfc_dec'] += wfc_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"WFC delta RA / delta Dec: {} / {}\".format(wfc_delta_ra, wfc_delta_dec))"
    ]
@@ -1530,8 +1530,8 @@
     "    SkyCoord(dxs['dxs_ra'], dxs['dxs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "dxs['dxs_ra'] -= dxs_delta_ra.to(u.deg)\n",
-    "dxs['dxs_dec'] -= dxs_delta_dec.to(u.deg)\n",
+    "dxs['dxs_ra'] += dxs_delta_ra.to(u.deg)\n",
+    "dxs['dxs_dec'] += dxs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"DXS delta RA / delta Dec: {} / {}\".format(dxs_delta_ra, dxs_delta_dec))"
    ]
@@ -1589,8 +1589,8 @@
     "    SkyCoord(servs['servs_ra'], servs['servs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "servs['servs_ra'] -= servs_delta_ra.to(u.deg)\n",
-    "servs['servs_dec'] -= servs_delta_dec.to(u.deg)\n",
+    "servs['servs_ra'] += servs_delta_ra.to(u.deg)\n",
+    "servs['servs_dec'] += servs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SERVS delta RA / delta Dec: {} / {}\".format(servs_delta_ra, servs_delta_dec))"
    ]
@@ -1648,8 +1648,8 @@
     "    SkyCoord(swire['swire_ra'], swire['swire_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "swire['swire_ra'] -= swire_delta_ra.to(u.deg)\n",
-    "swire['swire_dec'] -= swire_delta_dec.to(u.deg)\n",
+    "swire['swire_ra'] += swire_delta_ra.to(u.deg)\n",
+    "swire['swire_dec'] += swire_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SWIRE delta RA / delta Dec: {} / {}\".format(swire_delta_ra, swire_delta_dec))"
    ]
@@ -1707,8 +1707,8 @@
     "    SkyCoord(sparcs['sparcs_ra'], sparcs['sparcs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "sparcs['sparcs_ra'] -= sparcs_delta_ra.to(u.deg)\n",
-    "sparcs['sparcs_dec'] -= sparcs_delta_dec.to(u.deg)\n",
+    "sparcs['sparcs_ra'] += sparcs_delta_ra.to(u.deg)\n",
+    "sparcs['sparcs_dec'] += sparcs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"SpARCS delta RA / delta Dec: {} / {}\".format(sparcs_delta_ra, sparcs_delta_dec))"
    ]
@@ -1766,8 +1766,8 @@
     "    SkyCoord(panstarrs['panstarrs_ra'], panstarrs['panstarrs_dec']),\n",
     "    gaia_coords\n",
     ")\n",
-    "panstarrs['panstarrs_ra'] -= panstarrs_delta_ra.to(u.deg)\n",
-    "panstarrs['panstarrs_dec'] -= panstarrs_delta_dec.to(u.deg)\n",
+    "panstarrs['panstarrs_ra'] += panstarrs_delta_ra.to(u.deg)\n",
+    "panstarrs['panstarrs_dec'] += panstarrs_delta_dec.to(u.deg)\n",
     "\n",
     "print(\"PanSTARRS delta RA / delta Dec: {} / {}\".format(sparcs_delta_ra, sparcs_delta_dec))"
    ]
