started notebook to look at GAIA stars

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -2140,7 +2140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## X.b Wavelenght domain detection\n",
+    "## X.b Wavelength domain detection\n",
     "\n",
     "We add a binary `flag_optnir_det` indicating that a source was detected in a given wavelenght domain:\n",
     "\n",
