[dmu1_ml_ELAIS-N1] Update main notebook

--- a/dmu1/dmu1_ml_ELAIS-N1/0_main.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/0_main.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "## Diagnostics\n",
     "\n",
-    "The [3_Checks and diagnostics.ipynb](3_Checks and diagnostics.ipynb) notebook presents some checks and diagnostic plots on the final master list.\n"
+    "The [3_Checks_and_diagnostics.ipynb](3_Checks_and_diagnostics.ipynb) notebook presents some checks and diagnostic plots on the final master list.\n"
    ]
   }
  ],
