[dmu1_ml_ELAIS-N1] Update notebooks to prefix outputs

--- a/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
@@ -85,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "OUT_DIR =  os.environ.get('OUT_DIR', \"./data_tmp\")\n",
+    "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
     "except FileExistsError:\n",
@@ -486,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
