--- a/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "/home/yannick/.miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
       "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
      ]
     }
@@ -54,6 +54,7 @@
     "plt.rc('figure', figsize=(10, 6))\n",
     "\n",
     "import os\n",
+    "import time\n",
     "\n",
     "from astropy import units as u\n",
     "from astropy.coordinates import SkyCoord\n",
@@ -73,7 +74,14 @@
    },
    "outputs": [],
    "source": [
-    "OUT_DIR =  os.environ.get('OUT_DIR', \"./data_tmp\")"
+    "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
+    "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
+    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs(OUT_DIR)\n",
+    "except FileExistsError:\n",
+    "    pass"
    ]
   },
   {
@@ -91,13 +99,13 @@
    },
    "outputs": [],
    "source": [
-    "wfc = Table.read(\"{}/INT-WFC.fits\".format(OUT_DIR))\n",
-    "dxs = Table.read(\"{}/UKIDSS-DXS.fits\".format(OUT_DIR))\n",
-    "sparcs = Table.read(\"{}/SpARCS.fits\".format(OUT_DIR))\n",
-    "hsc = Table.read(\"{}/HSC-SSP.fits\".format(OUT_DIR))\n",
-    "ps1 = Table.read(\"{}/PS1.fits\".format(OUT_DIR))\n",
-    "servs = Table.read(\"{}/SERVS.fits\".format(OUT_DIR))\n",
-    "swire= Table.read(\"{}/SWIRE.fits\".format(OUT_DIR))"
+    "wfc = Table.read(\"{}/INT-WFC.fits\".format(TMP_DIR))\n",
+    "dxs = Table.read(\"{}/UKIDSS-DXS.fits\".format(TMP_DIR))\n",
+    "sparcs = Table.read(\"{}/SpARCS.fits\".format(TMP_DIR))\n",
+    "hsc = Table.read(\"{}/HSC-SSP.fits\".format(TMP_DIR))\n",
+    "ps1 = Table.read(\"{}/PS1.fits\".format(TMP_DIR))\n",
+    "servs = Table.read(\"{}/SERVS.fits\".format(TMP_DIR))\n",
+    "swire= Table.read(\"{}/SWIRE.fits\".format(TMP_DIR))"
    ]
   },
   {
@@ -1036,7 +1044,7 @@
    },
    "outputs": [],
    "source": [
-    "irac_origin.write(\"data/elais-n1_irac_fluxes_origins.fits\")"
+    "irac_origin.write(\"{}/elais-n1_irac_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   },
   {
@@ -1216,7 +1224,8 @@
    "outputs": [],
    "source": [
     "master_catalogue['help_id', 'wfc_id', 'dxs_id', 'servs_intid', 'swire_intid', \n",
-    "                 'sparcs_intid', 'hsc_id', 'ps1_id'].write(\"data/master_list_cross_ident_elais-n1.fits\")\n",
+    "                 'sparcs_intid', 'hsc_id', 'ps1_id'].write(\n",
+    "    \"{}/master_list_cross_ident_elais-n1{}.fits\".format(OUT_DIR, SUFFIX))\n",
     "master_catalogue.remove_columns(['wfc_id', 'dxs_id', 'servs_intid', 'swire_intid',\n",
     "                                 'sparcs_intid', 'hsc_id', 'ps1_id'])"
    ]
@@ -1276,7 +1285,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"data/master_catalogue_elais-n1.fits\")"
+    "master_catalogue[columns].write(\"{}/master_catalogue_elais-n1{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   }
  ],
@@ -1296,7 +1305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
