--- a/dmu1/dmu1_ml_ELAIS-N1/1.4_PanSTARRS-3SS.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.4_PanSTARRS-3SS.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "/home/yannick/.miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
       "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
      ]
     }
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "OUT_DIR =  os.environ.get('OUT_DIR', \"./data_tmp\")\n",
+    "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
     "except FileExistsError:\n",
@@ -514,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
