--- a/dmu1/dmu1_ml_ELAIS-N1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/3_Checks_and_diagnostics.ipynb
@@ -57,6 +57,9 @@
     "import locale\n",
     "locale.setlocale(locale.LC_ALL, 'en_GB')\n",
     "\n",
+    "import os\n",
+    "import time\n",
+    "\n",
     "from astropy.table import Table\n",
     "import numpy as np\n",
     "from matplotlib_venn import venn3\n",
@@ -72,7 +75,10 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"data/master_catalogue_elais-n1.fits\")"
+    "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
+    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "\n",
+    "master_catalogue = Table.read(\"{}/master_catalogue_elais-n1{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   },
   {
@@ -357,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
