various changes to dmu4 starmasking folder

--- a/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/master_catalogue_CDFS-SWIRE.ipynb
@@ -1050,18 +1050,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VIDEO initial catalogue as 190847 sources.\n",
+      "VIDEO cleaned catalogue as 190396 sources (451 removed).\n",
+      "VIDEO has 449 sources flagged as having been cleaned\n"
+     ]
+    }
+   ],
    "source": [
     "nb_video_orig = len(video)\n",
     "video = masterlist.remove_duplicates(\n",
     "    video, 'video_ra', 'video_dec', \n",
-    "    sort_col=['merr_app_video_r', 'merr_app_video_u', 'merr_app_video_g', 'merr_app_video_z'],\n",
+    "    sort_col=['merr_app_video_z', 'merr_app_video_y', 'merr_app_video_j', 'merr_app_video_h', 'merr_app_video_k'],\n",
     "    flag_name='video_flag_cleaned')\n",
-    "nb_wfc = len(wfc)\n",
+    "nb_video = len(video)\n",
     "print(\"VIDEO initial catalogue as {} sources.\".format(nb_video_orig))\n",
     "print(\"VIDEO cleaned catalogue as {} sources ({} removed).\".format(nb_video, nb_video_orig - nb_video))\n",
     "print(\"VIDEO has {} sources flagged as having been cleaned\".format(np.sum(video['video_flag_cleaned'])))"
